# Recon-GS

./: README.md  pyproject.toml
recon_gs/: align.py  config.py  export_mesh.py  mask_dynamic.py  pipeline.py  run_sfm.py  train_3dgs.py
src/: config.py  extract_frames.py  mask_dynamic.py  pipeline.py  run_sfm.py
