[project]
name = "recon-gs"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    # Frame extraction
    "ffmpeg-python>=0.2.0",
    # Dynamic masking
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "groundingdino-py>=0.4.0",
    "segment-anything-2>=1.0",
    "supervision>=0.21.0",
    "Pillow>=10.0.0",
    "numpy>=1.26.0",
    "opencv-python>=4.9.0",
    # SfM
    "pycolmap>=3.8.0",
    "hloc @ git+https://github.com/cvg/Hierarchical-Localization.git",
    # 3DGS
    "gsplat>=1.4.0",
    # CLI
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
recon-gs = "recon_gs.pipeline:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["recon_gs"]
