[project]
name = "recon-gs"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    # Frame extraction
    "ffmpeg-python>=0.2.0",
    # Dynamic masking
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    # GroundingDINO: install from source to avoid supervision version conflict
    "groundingdino @ git+https://github.com/IDEA-Research/GroundingDINO.git",
    "sam-2 @ git+https://github.com/facebookresearch/sam2.git",
    "Pillow>=10.0.0",
    "numpy>=1.26.0",
    "opencv-python>=4.9.0",
    # SfM (COLMAP CLI + pycolmap for result parsing)
    "pycolmap>=3.8.0",
    # 3DGS
    "gsplat>=1.4.0",
    # CLI
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
recon-gs = "recon_gs.pipeline:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["recon_gs"]

[tool.uv]
# GroundingDINO / SAM2 の setup.py がビルド時に torch を要求するため
# uv のビルド隔離を無効にして venv 内の torch を参照させる
no-build-isolation-package = ["groundingdino", "sam-2"]

[tool.uv.sources]
# torch / torchvision は PyTorch 公式インデックス (CUDA 12.1) から取得
torch = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
